force-app/main/default/objects/LM_ProductLicense__c/LM_ProductLicense__c.object-meta.xml
<CustomObject>
    <description>Contains details about the product license to be managed. Product license is what customer buys from Salesforce. It could be a base license or an add-on.</description>
    <label>Product License</label>
    <nameField>
        <label>Product License Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>