force-app/main/default/objects/LM_ProductLicense__c/fields/AssignedQuantity__c.field-meta.xml
<CustomField>
    <fullName>AssignedQuantity__c</fullName>
    <description>Rollup that shows the amount of activated and assigned users for this product license.</description>
    <inlineHelpText>Rollup that shows the amount of activated and assigned users for this product license.</inlineHelpText>
    <label>Assigned Quantity</label>
    <summaryFilterItems>
        <field>LM_ProductLicenseUserAssignment__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>LM_ProductLicenseUserAssignment__c.ProductLicense__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>