force-app/main/default/objects/LM_ProductLicense__c/fields/AssignmentType__c.field-meta.xml
<CustomField>
    <fullName>AssignmentType__c</fullName>
    <description
  >Determine whether this is a named or a login based license.</description>
    <inlineHelpText
  >Determine whether this is a named or a login based license.</inlineHelpText>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named</fullName>
            </value>
            <value>
                <fullName>Login</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>