force-app/main/default/objects/LM_ProductLicense__c/fields/AvailableQuantity__c.field-meta.xml
<CustomField>
    <fullName>AvailableQuantity__c</fullName>
    <description>Quantity of available licenses to be assigned</description>
    <formula>Quantity__c  -  AssignedQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Quantity of available licenses to be assigned</inlineHelpText>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>