force-app/main/default/objects/LM_ProductLicense__c/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <description>Name of the org associated with this product license</description>
    <inlineHelpText>Name of the org associated with this product license</inlineHelpText>
    <label>Org</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>