force-app/main/default/objects/LM_ProductLicense__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Total amount of product licenses of still active purchases</description>
    <inlineHelpText>Total amount of product licenses of still active purchases</inlineHelpText>
    <label>Quantity</label>
    <summarizedField>LM_ProductLicensePurchaseCondition__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>LM_ProductLicensePurchaseCondition__c.Contract_End_Date__c</field>
        <operation>equals</operation>
        <value>11/13/2024</value>
    </summaryFilterItems>
    <summaryForeignKey>LM_ProductLicensePurchaseCondition__c.ProductLicense__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>