force-app/main/default/objects/LM_ProductLicense__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>SOQL query to be used to determine which are the users that will be assigned to this product license. This query can take in consideration a number of factors, such as profile, permission set assignments and other user characteristics.</description>
    <inlineHelpText>SOQL query to be used to determine which are the users that will be assigned to this product license. This query can take in consideration a number of factors, such as profile, permission set assignments and other user characteristics.</inlineHelpText>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>