force-app/main/default/objects/LM_ProductLicense__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of the product license. Can be base or add-on</description>
    <inlineHelpText>Enter the type of the product license</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Add-on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>