force-app/main/default/objects/LM_ProductLicense__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <description
  >Determine whether this is an internal or external license.</description>
    <inlineHelpText
  >Determine whether this is an internal or external license.</inlineHelpText>
    <label>User Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>