force-app/main/default/objects/LM_ProductLicense__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Weight of this product license. In case of users satisfying the criteria to be in more than one base product license, this weight would determine what would be the product license assigned to the user. The more weighted license will be used to the assignment.</description>
    <inlineHelpText>Weight of this product license. In case of users satisfying the criteria to be in more than one base product license, this weight would determine what would be the product license assigned to the user. The more weighted license will be used to the assignment.</inlineHelpText>
    <label>Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>