force-app/main/default/objects/LM_ProductLicense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Org__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>UserType__c</columns>
    <columns>AssignmentType__c</columns>
    <columns>Quantity__c</columns>
    <columns>AssignedQuantity__c</columns>
    <columns>AvailableQuantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>